[Canvas - Code Formatting] Added spacing at the bottom of the page.

--- a/Course_Supporting_Documents/Canvas_-_Code_Formatting.html
+++ b/Course_Supporting_Documents/Canvas_-_Code_Formatting.html
@@ -46,7 +46,7 @@
     <img style='display:block;border:none;margin:16pt auto 0 auto;padding:0;width:600px;max-width:100%;height:auto;' src='../img/Canvas_-_Code_Formatting/Step_5_-_Java_-_Good_Example.png' alt='Good Example - Java'>
     <img style='display:block;border:none;margin:20pt auto 0 auto;padding:0;width:600px;max-width:100%;height:auto;' src='../img/Canvas_-_Code_Formatting/Step_5_-_Java_-_Bad_Example.png' alt='Bad Example - Java'>
 </p>
-<p class='bullet-list margin-top-16pt'>
+<p class='bullet-list margin-top-16pt' style='margin-bottom:12pt;'>
     Please feel free to contact your professor if you have any questions.
 </p>
 </body>
